# cvxcla

./: .buildinfo  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  .zenodo.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPOSITORY_ANALYSIS.md  SECURITY.md  comparison.md  create_kernel.sh  cvxcla-0.0.0-py3-none-any.whl  cvxcla-0.0.2-py3-none-any.whl  cvxcla-0.0.4-py3-none-any.whl  cvxcla-1.0.0-py3-none-any.whl  cvxcla-1.1.0-py3-none-any.whl  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  search.html  searchindex.js  taskfile.yml
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  renovate.json  template.yml
.github/rhiza/: template.yml
.github/workflows/: basic.yml  book.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  deptry.yml  devcontainer.yml  marimo.yml  pre-commit.yml  release.yml  renovate_rhiza_sync.yml  rhiza_benchmark.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_fuzzing.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_paper.yml  rhiza_release.yml  rhiza_scorecard.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml  sync.yml
.rhiza/: .env  history  rhiza.mk  template.yml
.rhiza/make.d/: paper.mk  releasing.mk  test.mk
_sources/docs/: index.md
artifacts/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
book/: .buildinfo  _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html  index.md  marimo.html  nb.html  reports.html  reports.md
book/marimo/: cla.py
book/sphinx/: conf.py
cvx/cla/: __init__.py  _cla.py  _first.py  aux.py  cla.py  claux.py  first.py  frontier.py  plot.py  plotting.py  schur.py  solver.py  types.py
cvx/hist/: cla.py
cvx/markowitz/: solver.py
cvxcla/: __init__.py  cla.py  first.py  types.py
docs/: api.html  factor.md  index.html  notebooks.md  reports.html
docs/notebooks/: cla.html
docs/paper/: cla.tex
docs/statsci_note/: .gitignore  imsart.sty  make_figure.py  make_figure_frontier.py  make_figure_grid.py  make_figure_identity.py  make_figures.py  make_paper_artifacts.py  perspective.tex
docs/tas_note/: note.tex
experiments/: clarabel_baseline.py  degeneracy_boundary.py  factor_benchmark.py  fetch_sp500.py  frontier.py  frontier_200x2000.py  frontier_20x50.py  frontier_real.py  fusion1.py  fusion2.py  fusion3.py  init_algo.py  inverse_cla.py  lasso_path.py  lasso_timing.py  minvar.py  rank_scaling.py  reproduce_paper.py  runtime_scaling.py  tie_degeneracy.py  unconstrained.py  validate_constraints.py  validate_exact.py  validate_lasso_constraints.py  zero.py
hist/: original.py
marimo/: cla.html  cla.md  index.html
marimo-html/: cla.html
paper/: cla.tex  paper.bib  paper.md
pdoc/: cvx.html  search.js
pdoc/cvx/: bson.html  cla.html  json.html
slides/: slideshow.md
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/_modules/: index.html
sphinx/autoapi/: index.html
src/: __init__.py
src/cvxcla/: __init__.py  _events.py  _kkt.py  _lasso.py  _lasso_validate.py  _projection.py  builder.py  cla.py  first.py  lasso.py  operators.py  optimize.py  pathtracer.py  types.py
src/tests/: __init__.py  conftest.py  test_cla.py  test_doctest.py  test_first.py  test_frontier.py  test_optimize.py  test_solver.py  test_types.py  test_version.py
taskfiles/: build.yml  docs.yml  quality.yml
tests/: bench.py  conftest.py  test_aux.py  test_builder.py  test_cla.py  test_deferred_imports.py  test_first.py  test_frontier.py  test_hist.py  test_import_graph.py  test_lasso.py  test_no_plotly.py  test_numpy.py  test_operators.py  test_optimize.py  test_package_metadata.py  test_pathtracer.py  test_plotting.py  test_properties.py  test_readme.py  test_schur.py  test_solver.py  test_types.py  test_version.py  test_xxx.py
tests/bailey/: cla.py
tests/benchmarks/: test_backend_scaling.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/fuzz/: fuzz_operators.py
tests/html-coverage/: class_index.html  d_166202a6f7ca1def___init___py.html  d_166202a6f7ca1def_aux_py.html  d_166202a6f7ca1def_claux_py.html  d_166202a6f7ca1def_first_py.html  d_166202a6f7ca1def_frontier_py.html  d_166202a6f7ca1def_plotting_py.html  d_166202a6f7ca1def_solver_py.html  d_166202a6f7ca1def_types_py.html  d_453eaa63cd1dfd0d___init___py.html  d_453eaa63cd1dfd0d_cla_py.html  d_545b0069563a4144___init___py.html  d_545b0069563a4144_cla_py.html  d_624930e3bc28da89___init___py.html  d_624930e3bc28da89_aux_py.html  d_624930e3bc28da89_cla_py.html  d_624930e3bc28da89_linalg_py.html  d_89a99e349bec0145___init___py.html  d_89a99e349bec0145_algebra_py.html  d_f9996fdeb8205a70___init___py.html  d_f9996fdeb8205a70_cla_py.html  function_index.html  index.html  status.json  z_166202a6f7ca1def___init___py.html  z_166202a6f7ca1def_cla_py.html  z_166202a6f7ca1def_claux_py.html  z_166202a6f7ca1def_first_py.html  z_166202a6f7ca1def_plot_py.html  z_166202a6f7ca1def_types_py.html  (+2 more)
(+223 files in other folders)
