[project]
name = "cvxcla"
version = "1.7.0"
description = "Critical line algorithm for the efficient frontier"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
# Private :: Do Not Upload (prevents rhiza_release.yml from publishing to PyPI)

dependencies = [
    "numpy>=2.0.0",
]

# add Philipp
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"},
           {name = "Philipp Schiele", email = "pschiele@stanford.edu"}]

[project.optional-dependencies]
plot = [
    "plotly>=6.0.1",
    "kaleido==1.3.0",
]

[project.urls]
Homepage = "https://github.com/cvxgrp/cvxcla"
Repository = "https://github.com/cvxgrp/cvxcla"


[dependency-groups]
dev = [
    "loguru==0.7.3",
    "mosek==11.2.1",
    "marimo==0.23.9",
    "pandas==3.0.3",
]
test = [
    "pytest>=7.0",
]
lint = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxcla"]

[tool.deptry.per_rule_ignores]
DEP002 = ["kaleido"]

[tool.deptry.package_module_name_map]
numpy = "numpy"
plotly = "plotly"
kaleido = "kaleido"
loguru = "loguru"
mosek = "mosek"
marimo = "marimo"
pandas = "pandas"
