[project]
name = "cvxcla"
version = "1.8.1"
description = "Critical line algorithm for the efficient frontier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.11",
]

authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"},
           {name = "Philipp Schiele", email = "pschiele@stanford.edu"}]

[project.optional-dependencies]
plot = [
    "plotly>=6.0.1",
    "kaleido==1.3.0",
]

[project.urls]
Homepage = "https://github.com/cvxgrp/cvxcla"
Repository = "https://github.com/cvxgrp/cvxcla"


[dependency-groups]
dev = [
    "loguru==0.7.3",
    "mosek==11.2.2",
    "marimo==0.23.9",
    "pandas==3.0.3",
]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
]
lint = []

# make a fresh `uv run pytest` work without knowing about dependency groups
[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxcla"]

[tool.interrogate]
# Nested helpers defined inside tests (objective functions, fake backends,
# mocks) are throwaway implementation detail, not documented API.
ignore-nested-functions = true
ignore-nested-classes = true

[tool.mypy]
# plotly ships no py.typed marker / stubs, so --strict cannot analyze it.
# The import is type-check-only (under TYPE_CHECKING) in types.py.
[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.deptry.per_rule_ignores]
DEP002 = ["kaleido"]

[tool.deptry.package_module_name_map]
numpy = "numpy"
plotly = "plotly"
kaleido = "kaleido"
loguru = "loguru"
mosek = "mosek"
marimo = "marimo"
pandas = "pandas"
